--- a/style.css
+++ b/style.css
@@ -1,27 +1,26 @@
 @font-face {
 	font-family: 'Montserrat';
+	font-weight: normal;
 	font-display: swap;
   	src: local('Montserrat'), local('Montserrat Regular'), local('Montserrat-Regular'), url('fonts/Montserrat-Regular.ttf'), url('/fonts/Montserrat-Regular.ttf');
 }
 @font-face {
 	font-family: 'Montserrat';
+	font-weight: bold;
 	font-display: swap;
 	src: local('Montserrat Bold'), local('Montserrat-Bold'), url('fonts/Montserrat-Bold.ttf'), url('/fonts/Montserrat-Bold.ttf');
-	font-weight: bold;
 }
 @font-face {
 	font-family: 'Lato';
-	font-style: normal;
 	font-weight: normal;
 	font-display: swap;
-	src: local('Lato Regular'), local('Lato-Regular'), url(fonts/Lato-Regular.ttf) format('truetype');
+	src: local('Lato'), local('Lato Regular'), local('Lato-Regular'), url('fonts/Lato-Regular.ttf'), url('/fonts/Lato-Regular.ttf');
 }
 @font-face {
 	font-family: 'Lato';
-	font-style: normal;
 	font-weight: bold;
 	font-display: swap;
-	src: local('Lato Bold'), local('Lato-Bold'), url(fonts/Lato-Bold.ttf) format('truetype');
+	src: local('Lato Bold'), local('Lato-Bold'), url('fonts/Lato-Bold.ttf'), url('/fonts/Lato-Bold.ttf');
 }
 
 :root {
@@ -60,7 +59,7 @@ a:not(.a-colored), a:hover:not(.a-colored), a:focus:not(.a-colored), a:active:no
 .navbar {
 	z-index: 1000;
 	white-space: nowrap;
-	font-size: 18px;
+	font-size: 17px;
 	font-family: Verdana, Helvetica, Geneva, Tahoma, Arial, sans-serif;
 	transition: all 0.3s;
 }
@@ -170,6 +169,7 @@ Copyright (c) 2016 Jonathan Suh <hello@jonsuh.com> (jonsuh.com)
 	padding: 0;
 	height: 100vh;
 	background-color: rgb(56, 42, 24);
+	/*background: linear-gradient(0deg, rgb(189,228,242), rgb(29,93,215));*/
 	margin: 0;
 	display: flex;
 	align-items: center;
@@ -190,7 +190,6 @@ video {
 	position: absolute;
 	font-family: Verdana, Helvetica, Geneva, Tahoma, Arial, sans-serif;
 	line-height: 1;
-	padding-top: 15px;
 	color: white;
 	text-align: center;
 	margin-left: auto;
@@ -243,12 +242,11 @@ video {
 	max-width: 220px !important;
 	min-width: 150px;
 	box-shadow: 0 0 15px -2px black !important;
-	background-color: rgba(109, 108, 108, 0.3);
+	background-color: rgba(136, 136, 136, 0.3);
 	transition: all 0.2s ease;
 }
 .mainbtn:hover, .mainbtn:focus, .mainbtn:active {
 	background-color: white;
-	border: none;
 	color: black;
 	text-shadow: none;
 	box-shadow: 0 0 15px -5px black !important;
@@ -336,17 +334,24 @@ video {
 	color: #202124;
 	text-align: left;
 	background-color: white;
-	border-radius: 2px;
+	border-radius: 3px;
 	padding: 40px;
 	margin: 40px 0 40px 0;
-	border: 1px solid #f6f6f6;
-	border-bottom: 2.5px solid rgb(84, 116, 219);
-	border-bottom-left-radius: 3px;
-	border-bottom-right-radius: 3px;
-	box-shadow: 0 4px 4px -4px rgb(173, 173, 173);
+	border: 1px solid #f0f1f3;
+	border-bottom-left-radius: 4px;
+	border-bottom-right-radius: 4px;
+	box-shadow: 0 4px 4px -3px rgb(204, 204, 204);
 }
 .faq .qa:hover {
 	transform: translate(-5px, -5px);
+}
+.faq .qa:before {
+	content: " ";
+    border-top: 18px solid rgb(56, 114, 240);
+    border-right: 18px solid transparent;
+    position: absolute;
+    top: 0;
+    left: 0;
 }
 .faq .qa h4 {
 	font-size: 1.2rem;
@@ -364,10 +369,10 @@ video {
 	padding-bottom: 60px;
 }
 
-.card {
+.card-old {
 	width: 100%;
-	max-width: 14rem;
-	margin: 10px 0 25px 0;
+	max-width: 15rem;
+	margin: 10px 0 27px 0 !important;
 	display: inline-block;
 	box-shadow: 0 5px 8px -2px rgba(0, 0, 0, 0.15), 0 7px 15px 0 rgb(216, 216, 220);
 	background: white;
@@ -376,10 +381,13 @@ video {
 	font-size: 28px;
 	border-radius: 10px;
 	border: none;
-	padding-bottom: 15px;
+	border-bottom: 4px solid white;
+	border-bottom-left-radius: 8px;
+	border-bottom-right-radius: 8px;
+	padding-bottom: 10px;
 	position: relative;
 }
-.card img {
+.card-old img {
 	margin: 15px auto 5px auto;
 	height: auto;
 }
@@ -390,11 +398,13 @@ video {
 .card-overlay {
 	opacity: 0;
 	position: absolute;
-	height: 100%;
+	height: calc(100% + 4px);
 	width: 100%;
 	padding: 0;
 	margin: 0;
 	border-radius: 9.5px;
+	border-bottom-left-radius: 8px;
+	border-bottom-right-radius: 8px;
 	border: 0;
 	color: white;
 	font-size: 16pt;
@@ -482,7 +492,10 @@ video {
 	padding: 20px;
 	font-size: 14pt;
 	color: black;
-	line-height: 2;
+	background-color: rgb(26, 26, 26);
+	color: white;
+	padding-bottom: 6px;
+	line-height: 1.6;
 }
 
 a.social {
@@ -497,6 +510,70 @@ a.social :hover {
 	height: 35px;
 	width: auto;
 	margin-top: 10px;
+	background-color: white;
+	clip-path: circle();
+	padding: 6px;
+}
+
+.form-control:hover:not(.is-invalid):not(.is-valid), .form-control:focus:not(.is-invalid):not(.is-valid), .form-control:active:not(.is-invalid):not(.is-valid) {
+	box-shadow: none !important;
+	border-color: darkgray;
+}
+.form-control:focus, .form-control:active {
+	box-shadow: none !important;
+	border-width: 1.5px;
+}
+
+.modal-content {
+	border-radius: .75rem;
+	padding: .25rem;
+}
+
+.modal-body-main {
+	text-align: center;
+}
+
+.form-control {
+	border: 2px solid #ededee;
+	background-color: #ededee !important;
+	color: #495057 !important;
+}
+
+.form-control:hover {
+	background-color: #f3f3f4 !important;
+	border-color: #f3f3f4 !important;
+}
+
+.form-control:focus {
+	background-color: white !important;
+	border: 2px solid #949494 !important;
+	box-shadow: none !important;
+}
+
+.form-group > label {
+	margin-bottom: .3rem;
+}
+
+.close-btn {
+	background: #ececec;
+	border-radius: 50px;
+	width: 35px;
+	padding: 6px;
+	stroke: rgb(78, 82, 82);
+	fill: transparent;
+	stroke-linecap: round;
+	stroke-width: 5;
+	margin: 0;
+}
+
+.check {
+	display: inline-block;
+	transform: rotate(39deg);
+	height: 20px;
+	width: 10px;
+	border-bottom: 4px solid white;
+	border-right: 4px solid white;
+	margin: 0 2px;
 }
 
 @media screen and (max-width: 370px) {
@@ -524,7 +601,7 @@ a.social :hover {
 		font-size: 22px;
 	}
 	.card-columns {
-		column-count: 2;
+		column-count: auto;
 	}
 	#map {
 		height: 460px;
